--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "moment-timezone": "^0.5.43",
+    "puppeteer": "^20.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redaxios": "^0.5.1"
