--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "gh-pages": "^5.0.0",
     "moment-timezone": "^0.5.43",
     "puppeteer": "^20.1.2",
     "react": "^18.2.0",
