--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.12",
     "gh-pages": "^5.0.0",
     "moment-timezone": "^0.5.43",
+    "netlify-cli": "^15.0.2",
     "puppeteer": "^20.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
