--- a/netlify.toml
+++ b/netlify.toml
@@ -6,10 +6,21 @@
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
-  #[[redirects]]
-  #  from = "/api"
-  #  to = "https://es.besoccer.com/equipo/america-cali"
-  #  status = 200
+[[redirects]]
+  from = "/api/*"
+  to = "https://es.besoccer.com/equipo/america-cali/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/nitter/*"
+  to = "https://nitter.net/AmericadeCali/rss/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/america/*"
+  to = "https://www.americadecali.co/:splat"
+  status = 200
+
 
   ## (optional) Settings for Netlify Dev
   ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
